--- a/src/customer-list/list-item.scss
+++ b/src/customer-list/list-item.scss
@@ -2,9 +2,10 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    flex-wrap: wrap;
     position: relative;
-    min-height: 50px;
-    padding: 0 1rem;    
+    padding: 1rem;
+    cursor: pointer;
     &:not(:last-child):after {
         content: "";
         width: calc(100% - 2rem);
@@ -15,6 +16,24 @@
         transform: translateX(-50%);
     }
 }
+
+.item-name {
+    font-size: 1.25rem;
+    margin-bottom: .3125rem;
+}
+
+.spec {
+    flex: 0 0 100%;
+    display: flex;
+    margin-top: .3125rem;
+    .spec-key {
+        font-weight: bold;
+        font-size: 16px;
+        margin-right: 5px;
+        text-transform: capitalize;
+    }
+}
+
 .delete-btn {
     color: #4646c4;
     cursor: pointer;
