--- a/src/customer-form/customer-form.scss
+++ b/src/customer-form/customer-form.scss
@@ -1,3 +1,18 @@
 .customer-form {
     
 }
+
+.submit-btn {
+    height: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    box-shadow: none;
+    border: 0;
+    border-radius: 6px;
+    min-width: 70px;
+    margin-left: auto;
+    background-color: #c1c1d9;
+    cursor: pointer;
+    outline: none;
+}
